--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,7 +27,7 @@ build:
     - until docker info; do sleep 1; done
   script:
     - cat $ENV > ./.env
-    - "eval cat .env"
+    - echo "'$ENV'"
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
     - >
       docker build --build-arg NODE_ENV="stage" -t $CI_REGISTRY_IMAGE/$CI_COMMIT_REF_NAME:$CI_COMMIT_SHORT_SHA .
