--- a/package.json
+++ b/package.json
@@ -29,12 +29,15 @@
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@reduxjs/toolkit": "^2.1.0",
+    "@sendgrid/mail": "^8.1.0",
+    "@t3-oss/env-core": "^0.8.0",
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "dotenv": "^16.4.1",
     "drizzle-orm": "^0.29.3",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.321.0",
     "next": "14.1.0",
     "next-auth": "^4.24.5",
@@ -53,6 +56,7 @@
     "@faker-js/faker": "^8.4.0",
     "@hookform/devtools": "^4.3.1",
     "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20",
     "@types/pg": "^8.11.0",
     "@types/react": "^18",
