--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "clsx": "^2.1.0",
     "dotenv": "^16.4.1",
     "drizzle-orm": "^0.29.3",
+    "drizzle-zod": "^0.5.1",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.321.0",
     "next": "14.1.0",
