--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
+    "classnames": "^2.5.1",
     "clsx": "^2.1.0",
     "dotenv": "^16.4.1",
     "drizzle-orm": "^0.29.3",
@@ -59,6 +60,7 @@
     "@faker-js/faker": "^8.4.0",
     "@hookform/devtools": "^4.3.1",
     "@types/bcrypt": "^5.0.2",
+    "@types/classnames": "^2.3.1",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20",
     "@types/pg": "^8.11.0",
