--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "5.12.1",
     "autoprefixer": "^10.0.1",
+    "cookies-next": "^4.1.1",
     "drizzle-kit": "^0.20.14",
     "eslint": "^8.56.0",
     "eslint-config-airbnb": "18.2.1",
