--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,7 +42,7 @@ deploy:
   script:
     - echo $KUBE_CONFIG | base64 -d > ./config.txt
     - kubectl set image deploy/app app=$CI_REGISTRY_IMAGE/$CI_COMMIT_REF_NAME:$CI_COMMIT_SHORT_SHA --kubeconfig ./config.txt -n dhora-stage
-    - kubectl rollout status deploy/app --kubeconfig ./config -n dhora-stage
+    - kubectl rollout status deploy/app --kubeconfig ./config.txt -n dhora-stage
 
 production:build:
   image: docker:latest
@@ -70,6 +70,6 @@ production:deploy:
   only:
     - production
   script:
-    - echo $KUBE_CONFIG | base64 -d > ./config
-    - kubectl set image deploy/app app=$CI_REGISTRY_IMAGE/$CI_COMMIT_REF_NAME:$CI_COMMIT_SHORT_SHA --kubeconfig ./config -n dhora
-    - kubectl rollout status deploy/app --kubeconfig ./config -n dhora
+    - echo $KUBE_CONFIG | base64 -d > ./config.txt
+    - kubectl set image deploy/app app=$CI_REGISTRY_IMAGE/$CI_COMMIT_REF_NAME:$CI_COMMIT_SHORT_SHA --kubeconfig ./config.txt -n dhora
+    - kubectl rollout status deploy/app --kubeconfig ./config.txt -n dhora
