--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@reduxjs/toolkit": "^2.2.1",
     "@sendgrid/mail": "^8.1.1",
     "@t3-oss/env-core": "^0.9.2",
     "class-variance-authority": "^0.7.0",
@@ -41,6 +42,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
     "react-icons": "^5.0.1",
+    "react-redux": "^9.1.0",
     "stripe": "^14.16.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
