--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "studio": "drizzle-kit studio"
   },
   "dependencies": {
+    "@docuseal/react": "^1.0.34",
     "@hookform/resolvers": "^3.3.4",
     "@lucia-auth/adapter-drizzle": "^1.0.1",
     "@radix-ui/react-accordion": "^1.1.2",
@@ -33,10 +34,12 @@
     "clsx": "^2.1.0",
     "drizzle-orm": "^0.29.3",
     "drizzle-zod": "^0.5.1",
+    "jsonwebtoken": "^9.0.2",
     "lucia": "^3.0.1",
     "lucide-react": "^0.330.0",
     "next": "14.1.0",
     "oslo": "^1.1.1",
+    "pg": "^8.11.3",
     "postgres": "^3.4.3",
     "react": "^18",
     "react-dom": "^18",
@@ -49,7 +52,9 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20",
+    "@types/pg": "^8.11.0",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
@@ -57,6 +62,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
+    "prettier": "^3.2.5",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
