--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@reduxjs/toolkit": "^2.2.1",
     "@sendgrid/mail": "^8.1.1",
     "@t3-oss/env-core": "^0.9.2",
+    "@tailwindcss/typography": "^0.5.10",
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
