--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "date-fns": "^3.3.1",
     "drizzle-orm": "^0.29.3",
     "drizzle-zod": "^0.5.1",
     "jsonwebtoken": "^9.0.2",
