--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "jsonwebtoken": "^9.0.2",
     "lucia": "^3.0.1",
     "lucide-react": "^0.330.0",
+    "minio": "^7.1.3",
     "next": "14.1.0",
     "oslo": "^1.1.1",
     "pg": "^8.11.3",
@@ -63,6 +64,7 @@
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/minio": "^7.1.1",
     "@types/node": "^20",
     "@types/pg": "^8.11.0",
     "@types/react": "^18",
