--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@sendgrid/mail": "^8.1.1",
     "@t3-oss/env-core": "^0.9.2",
     "@tailwindcss/typography": "^0.5.10",
+    "@tanstack/react-table": "^8.13.2",
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
