--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "date-fns": "^3.3.1",
     "drizzle-orm": "^0.29.3",
     "drizzle-zod": "^0.5.1",
+    "html2pdf.js": "0.9.0",
     "jsonwebtoken": "^9.0.2",
     "lucia": "^3.0.1",
     "lucide-react": "^0.330.0",
