--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
     "react-icons": "^5.0.1",
+    "react-places-autocomplete": "^7.3.0",
     "react-redux": "^9.1.0",
     "sharp": "^0.33.2",
     "stripe": "^14.16.0",
@@ -74,6 +75,7 @@
     "@types/pg": "^8.11.0",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-places-autocomplete": "^7.2.14",
     "@types/sharp": "^0.32.0",
     "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.0.1",
