--- a/package.json
+++ b/package.json
@@ -45,7 +45,6 @@
     "date-fns": "^3.3.1",
     "drizzle-orm": "^0.29.3",
     "drizzle-zod": "^0.5.1",
-    "html2pdf.js": "0.9.0",
     "jsonwebtoken": "^9.0.2",
     "lucia": "^3.0.1",
     "lucide-react": "^0.330.0",
@@ -54,6 +53,7 @@
     "oslo": "^1.1.1",
     "pg": "^8.11.3",
     "postgres": "^3.4.3",
+    "puppeteer": "^22.4.1",
     "react": "^18",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18",
