--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-icons": "^5.0.1",
     "react-places-autocomplete": "^7.3.0",
     "react-redux": "^9.1.0",
+    "react-to-print": "^2.15.1",
     "sharp": "^0.33.2",
     "stripe": "^14.16.0",
     "tailwind-merge": "^2.2.1",
