--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "drizzle-zod": "^0.5.1",
     "html2pdf.js": "0.9.0",
     "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "lucia": "^3.0.1",
     "lucide-react": "^0.330.0",
     "minio": "^7.1.3",
@@ -63,6 +64,7 @@
     "react-icons": "^5.0.1",
     "react-places-autocomplete": "^7.3.0",
     "react-redux": "^9.1.0",
+    "react-timezone-select": "^3.2.3",
     "react-to-print": "^2.15.1",
     "sharp": "^0.33.2",
     "stripe": "^14.16.0",
@@ -73,6 +75,7 @@
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/lodash": "^4.17.0",
     "@types/minio": "^7.1.1",
     "@types/node": "^20",
     "@types/pg": "^8.11.0",
