--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@t3-oss/env-core": "^0.9.2",
     "@tailwindcss/typography": "^0.5.10",
     "@tanstack/react-table": "^8.13.2",
+    "@vvo/tzdb": "^6.126.0",
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -64,7 +65,6 @@
     "react-icons": "^5.0.1",
     "react-places-autocomplete": "^7.3.0",
     "react-redux": "^9.1.0",
-    "react-timezone-select": "^3.2.3",
     "react-to-print": "^2.15.1",
     "sharp": "^0.33.2",
     "stripe": "^14.16.0",
