--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react-hook-form": "^7.50.1",
     "react-icons": "^5.0.1",
     "react-places-autocomplete": "^7.3.0",
+    "react-quill": "^2.0.0",
     "react-redux": "^9.1.0",
     "react-to-print": "^2.15.1",
     "sharp": "^0.33.2",
