--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "react-places-autocomplete": "^7.3.0",
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.0",
+    "react-select": "^5.8.0",
     "react-to-print": "^2.15.1",
     "sharp": "^0.33.2",
     "stripe": "^14.16.0",
