--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
   },
   "dependencies": {
     "@docuseal/react": "^1.0.34",
+    "@fullcalendar/core": "^6.1.11",
+    "@fullcalendar/daygrid": "^6.1.11",
+    "@fullcalendar/interaction": "^6.1.11",
+    "@fullcalendar/timegrid": "^6.1.11",
     "@hookform/resolvers": "^3.3.4",
     "@lucia-auth/adapter-drizzle": "^1.0.1",
     "@radix-ui/react-accordion": "^1.1.2",
