--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,6 @@ S3_HOST=""
 S3_ACCESS_KEY=""
 S3_SECRET_KEY=""
 NEXT_PUBLIC_GOOGLE_PLACES_API_KEY=""
+LIVEKIT_API_KEY=<your API Key>
+LIVEKIT_API_SECRET=<your API Secret>
+NEXT_PUBLIC_LIVEKIT_URL=<your LiveKit server URL>
