--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@fullcalendar/react": "^6.1.11",
     "@fullcalendar/timegrid": "^6.1.11",
     "@hookform/resolvers": "^3.3.4",
+    "@livekit/components-react": "^2.3.1",
+    "@livekit/components-styles": "^1.0.12",
     "@lucia-auth/adapter-drizzle": "^1.0.1",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-avatar": "^1.0.4",
@@ -54,8 +56,10 @@
     "dayjs": "^1.11.10",
     "drizzle-orm": "^0.29.3",
     "drizzle-zod": "^0.5.1",
+    "embla-carousel-react": "^8.1.3",
     "html2pdf.js": "0.9.0",
     "jsonwebtoken": "^9.0.2",
+    "livekit-server-sdk": "^2.3.0",
     "lodash": "^4.17.21",
     "lucia": "^3.0.1",
     "lucide-react": "^0.330.0",
