--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "react-icons": "^5.0.1",
     "react-places-autocomplete": "^7.3.0",
     "react-quill": "^2.0.0",
+    "react-rating": "^2.0.5",
     "react-redux": "^9.1.0",
     "react-select": "^5.8.0",
     "react-to-print": "^2.15.1",
